syntax = "proto3";
package storeapis.v1;
option go_package = "github.com/awe76/saga/store/storeapis/v1";

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  repeated string values = 1;
}

service StoreService {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}